--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devkit-build-optimizer",
-  "version": "0.0.1",
-  "description": "DeKit Build Optimizer",
+  "version": "0.0.2",
+  "description": "devkit build optimizer",
   "experimental": true,
   "private": true,
   "main": "src/index.js",
@@ -10,12 +10,13 @@
     "build-optimizer": "./src/build-optimizer/cli.js"
   },
   "dependencies": {
-    "source-map": "0.7.3",
-    "tslib": "2.3.1",
-    "typescript": "4.6.2"
+    "source-map": "0.7.4",
+    "v8-compile-cache-lib": "3.0.1",
+    "tslib": "2.4.0",
+    "typescript": "4.7.3"
   },
   "peerDependencies": {
-    "webpack": "^5.30.0"
+    "webpack": "^5.70.0"
   },
   "peerDependenciesMeta": {
     "webpack": {
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^16.11.26",
     "@yarnpkg/lockfile": "^1.1.0",
+    "snyk-nodejs-lockfile-parser": "1.41.0",
     "prettier": "^2.6.1",
     "webpack": "5.70.0"
   }
